--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html class="has-navbar-fixed-top">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>front4pjt</title>
+    <meta name="google-signin-client_id" content="975943523486-8n16o4rijv16h02s7rughdkievhh2rq9.apps.googleusercontent.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.4/css/bulma.min.css">
+    <link rel="shortcut icon" type="image/png" href="./src/assets/supfiles.png"/>
+    <title>SupFiles</title>
   </head>
   <body>
-    <div id="app"></div>
+  <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
